Burger menu text alignment fix

--- a/react-portfolio/src/Burger.css
+++ b/react-portfolio/src/Burger.css
@@ -49,18 +49,22 @@
 .link-element {
     text-decoration: none;
     background-color: green;
+    height: 100%;
 }
 
 .link-text {
     padding: 0;
     margin: 0;
     color: white;
+    margin: auto auto;
 }
 
 .link-container {
     background-color: green;
-    padding: 0 5px 0 5px;
+    padding: 0 10px 0 10px;
     border-radius: 5px;
+    height: 100%;
+    display: flex;
 }
 
 .link-text:visited {
